<resources>
    <string name="app_name">StepCounter</string>
    <string name="facebook_app_id">1797526797211863</string>
    <string name="fb_login_protocol_scheme">fb1797526797211863</string>


    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>

    <string name="openDrawerContentDescRes">openDrawerContentDescRes</string>
    <string name="closeDrawerContentDescRes">closeDrawerContentDescRes</string>

    <!-- Main Activity -->
    <string name="steps_today">Steps Today</string>
    <string name="calories_burned">Calories</string>
    <string name="distance">Distance</string>
    <string name="speed_title">Speed</string>
    <string name="pace_title">Pace</string>
    <string name="history_trace">Trace</string>

    <string name="action_settings">Settings</string>

    <string name="calories_unit">cal</string>
    <string name="distance_unit_metric">km</string>
    <string name="distance_unit_imperial">miles</string>
    <string name="speed_unit_metric">km / h</string>
    <string name="speed_unit_imperial">miles / h</string>
    <string name="pace_unit">steps / min</string>

</resources>

