<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qc.stepcounter.StepActivity"
    android:fitsSystemWindows="true"

    >

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            style="@style/Basic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                style="@style/Basic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"

                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

                    android:id="@+id/card_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#4a148c"
                    card_view:cardCornerRadius="@dimen/spacing_tiny"
                    card_view:cardElevation="@dimen/spacing_tiny"

                    >

                    <LinearLayout
                        android:id="@+id/box_steps"
                        style="@style/EntryBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/step_title"
                            style="@style/EntryTitleMajor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/steps_today"
                            android:textColor="@color/cardview_light_background"

                            />

                        <TextView
                            android:id="@+id/step_value"
                            style="@style/EntryValueMajor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/cardview_light_background"

                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <LinearLayout
                    android:id="@+id/row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7c43bd"
                    android:orientation="horizontal"

                    >

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_calories"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#7c43bd"
                        card_view:cardCornerRadius="@dimen/spacing_tiny"
                        card_view:cardElevation="@dimen/spacing_tiny">

                        <LinearLayout
                            android:id="@+id/box_calories"
                            style="@style/EntryBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/calories_title"
                                style="@style/EntryTitleMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/calories_burned"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/calories_value"
                                style="@style/EntryValueMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/step_unit"
                                style="@style/UnitBasic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/calories_unit"
                                android:textColor="@color/cardview_light_background" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#12005e"
                        card_view:cardCornerRadius="@dimen/spacing_tiny"
                        card_view:cardElevation="@dimen/spacing_tiny">

                        <LinearLayout
                            android:id="@+id/box_distance"
                            style="@style/EntryBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:textColor="@color/cardview_light_background"

                            >

                            <TextView
                                android:id="@+id/distance_title"
                                style="@style/EntryTitleMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/distance"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/distance_value"
                                style="@style/EntryValueMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/distance_unit"
                                style="@style/UnitBasic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/distance_unit_metric"
                                android:textColor="@color/cardview_light_background"

                                />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_speed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#6a0080"
                        card_view:cardCornerRadius="@dimen/spacing_tiny"
                        card_view:cardElevation="@dimen/spacing_tiny">

                        <LinearLayout
                            android:id="@+id/box_speed"
                            style="@style/EntryBox"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:textColor="@color/cardview_light_background"

                            >

                            <TextView
                                android:id="@+id/speed_title"
                                style="@style/EntryTitleMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/speed_title"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/speed_value"
                                style="@style/EntryValueMinor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/cardview_light_background"

                                />

                            <TextView
                                android:id="@+id/speed_unit"
                                style="@style/UnitBasic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/speed_unit_metric"
                                android:textColor="@color/cardview_light_background"

                                />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!---<Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="share"
                        android:id="@+id/share"/>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="share" />

                        <Button
                            android:id="@+id/start"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"

                            android:paddingBottom="0dp"
                            android:text="Start Calculating" />

                        <Button
                            android:id="@+id/pause"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:text="Pause"

                            android:visibility="gone" />

                        <Button
                            android:id="@+id/stop"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginLeft="2dp"
                            android:layout_weight="1"
                            android:text="Stop"
                            android:visibility="gone" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>


</android.support.v4.widget.DrawerLayout>
